task 000003 - inclui implementacao de calculadora

--- a/src/app/modules/home/menu.component.html
+++ b/src/app/modules/home/menu.component.html
@@ -1,13 +1,15 @@
+<header class="header">My Multi App</header>
+<br>
+<hr>
 <div class="mat-group">
   <section class="section-theme">
     <mat-tab-group animationDuration="2000ms">
       <mat-tab label="Calculadora">
-        Não criei ainda
+        <app-calculadora></app-calculadora>
       </mat-tab>
       <mat-tab label="App To-do">
         <app-home></app-home>
       </mat-tab>
     </mat-tab-group>
   </section>
-
 </div>
