--- a/src/app/modules/home/menu.component.scss
+++ b/src/app/modules/home/menu.component.scss
@@ -7,3 +7,11 @@
   border-radius: 1%;
   border: 1px;
 }
+
+.header {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 20px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: rgb(95, 0, 139);
+}
